<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainLayout_popupHome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:padding="10dp"
        android:textColor="#9E9E9E"
        android:text="Select Action"/>

    <LinearLayout
        android:id="@+id/add_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/widget_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:textColor="@color/materialBlack"
            android:text="@string/add_widget"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/shortcut_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:textColor="@color/materialBlack"
            android:text="@string/add_shortcut"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apply_icon_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/theme_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:textColor="@color/materialBlack"
            android:text="@string/apply_icon_theme"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/cancel_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:textColor="@color/materialBlack"
            android:text="@string/cancel_icon"/>

    </LinearLayout>

</LinearLayout>
